- Fixed: Products without own stock not hidden in filters on stock overview page (#660)
- Fixed: Amount of products without own stock not hidden on stock overview page (#654)
- Fixed: Navigation bar color on devices without gesture navigation
- Fixed: Default due days after freezing applied on purchase when freezer location is set (#593)
- Fixed: (not F-Droid) Crash with ML Kit scanner after barcode was scanned

## 3.0.0

- New: Material You redesign with dynamic colors for Android 12+
- New: Replaced HTML editor for recipe and product descriptions (same like on grocy server)
- New: Support for more than two decimal places for amounts & prices, uses option from server (#459)
- New: Product option "Move on open" (#569)
- New: Option in behavior settings for copying barcode note to stock entry note field (#609)
- New: Option on purchase page to print stock label and default option on master product page (#570)
- Improved: Layout on large screens
- Improved: (not F-Droid) ML Kit scanner now only recognises barcodes in preview field
- Improved: Shopping mode page now can be opened with deeplink "grocy://shoppingmodepage" (#519)
- Improved: Selection of child products in purchase form if parent product has no own stock (#508)
- Improved: Master object lists now have fuzzy search (#610)
- Improved: Consume quick mode confirmation page now has option to open instead of consume (#572)
- Improved: Allow changing stock unit of product if no transaction was made since creation (#635)
- Improved: Ingredients display available amount in stock if fulfilled
- Fixed: F-Droid build should work again (#566)
- Fixed: Crash when amount in recipe ingredient was NaN (thanks @Whhoesj for your fix) (#565)
- Fixed: Wrong ingredient amount in the recipe view with base servings other than 1 (#584)
- Fixed: Wrong ingredient amount on recipe pages related to unit conversions (#584, #585, #612)
- Fixed: Wrong price calculation when last price was stored for barcode (#578)