@@ -70,6 +70,7 @@ public class TransferFragment extends BaseFragment implements BarcodeListener {
   private TransferViewModel viewModel;
   private InfoFullscreenHelper infoFullscreenHelper;
   private EmbeddedFragmentScanner embeddedFragmentScanner;
+  private Boolean backFromChooseProductPage;
 
   @Override
   public View onCreateView(
@@ -175,9 +176,11 @@ public class TransferFragment extends BaseFragment implements BarcodeListener {
     Integer productIdSavedSate = (Integer) getFromThisDestinationNow(Constants.ARGUMENT.PRODUCT_ID);
     if (productIdSavedSate != null) {
       removeForThisDestination(Constants.ARGUMENT.PRODUCT_ID);
-      viewModel.setQueueEmptyAction(
-          () -> viewModel.setProduct(productIdSavedSate, null, null)
-      );
+      viewModel.setProductWillBeFilled(true);
+      viewModel.setQueueEmptyAction(() -> {
+        viewModel.setProduct(productIdSavedSate, null, null);
+        viewModel.setProductWillBeFilled(false);
+      });
     } else if (NumUtil.isStringInt(args.getProductId())) {
       int productId = Integer.parseInt(args.getProductId());
       setArguments(new TransferFragmentArgs.Builder(args)
@@ -192,8 +195,17 @@ public class TransferFragment extends BaseFragment implements BarcodeListener {
       viewModel.addBarcodeToExistingProduct(barcode);
     }
 
+    backFromChooseProductPage = (Boolean)
+        getFromThisDestinationNow(ARGUMENT.BACK_FROM_CHOOSE_PRODUCT_PAGE);
+    if (backFromChooseProductPage != null) {
+      removeForThisDestination(ARGUMENT.BACK_FROM_CHOOSE_PRODUCT_PAGE);
+    }
     embeddedFragmentScanner.setScannerVisibilityLive(
-        viewModel.getFormData().getScannerVisibilityLive()
+        viewModel.getFormData().getScannerVisibilityLive(),
+        backFromChooseProductPage != null
+            && (viewModel.getFormData().getProductDetailsLive().getValue() != null
+            || viewModel.isProductWillBeFilled())
+            ? backFromChooseProductPage : false
     );
 
     ColorRoles roles = ResUtil.getHarmonizedRoles(activity, R.color.blue);
@@ -251,6 +263,12 @@ public class TransferFragment extends BaseFragment implements BarcodeListener {
   @Override
   public void onResume() {
     super.onResume();
+    if (backFromChooseProductPage != null && backFromChooseProductPage
+        && (viewModel.getFormData().getProductDetailsLive().getValue() != null
+        || viewModel.isProductWillBeFilled())) {
+      backFromChooseProductPage = false;
+      return;
+    }
     embeddedFragmentScanner.onResume();
   }
 
