@@ -92,6 +92,7 @@ public class ConsumeViewModel extends BaseViewModel {
   private final MutableLiveData<Boolean> quickModeEnabled;
 
   private Runnable queueEmptyAction;
+  private boolean productWillBeFilled;
   private final int maxDecimalPlacesAmount;
 
   public ConsumeViewModel(@NonNull Application application, ConsumeFragmentArgs args) {
@@ -145,10 +146,6 @@ public class ConsumeViewModel extends BaseViewModel {
   }
 
   public void downloadData(@Nullable String dbChangedTime) {
-        /*if(isOffline()) { // skip downloading
-            isLoadingLive.setValue(false);
-            return;
-        }*/
     if (dbChangedTime == null) {
       dlHelper.getTimeDbChanged(this::downloadData, () -> onDownloadError(null));
       return;
@@ -175,8 +172,6 @@ public class ConsumeViewModel extends BaseViewModel {
       }
       return;
     }
-
-    //currentQueueLoading = queue;
     queue.start();
   }
 
@@ -644,6 +639,14 @@ public class ConsumeViewModel extends BaseViewModel {
 
   public void setQueueEmptyAction(Runnable queueEmptyAction) {
     this.queueEmptyAction = queueEmptyAction;
+  }
+
+  public void setProductWillBeFilled(boolean productWillBeFilled) {
+    this.productWillBeFilled = productWillBeFilled;
+  }
+
+  public boolean isProductWillBeFilled() {
+    return productWillBeFilled;
   }
 
   public boolean isQuickModeEnabled() {
