@@ -96,6 +96,7 @@ public class InventoryViewModel extends BaseViewModel {
   private final MutableLiveData<Boolean> quickModeEnabled;
 
   private Runnable queueEmptyAction;
+  private boolean productWillBeFilled;
   private final int maxDecimalPlacesAmount;
   private final int decimalPlacesPriceInput;
 
@@ -156,10 +157,6 @@ public class InventoryViewModel extends BaseViewModel {
   }
 
   public void downloadData(@Nullable String dbChangedTime) {
-    /*if(isOffline()) { // skip downloading
-        isLoadingLive.setValue(false);
-        return;
-    }*/
     if (dbChangedTime == null) {
       dlHelper.getTimeDbChanged(this::downloadData, () -> onDownloadError(null));
       return;
@@ -190,8 +187,6 @@ public class InventoryViewModel extends BaseViewModel {
       }
       return;
     }
-
-    //currentQueueLoading = queue;
     queue.start();
   }
 
@@ -616,6 +611,14 @@ public class InventoryViewModel extends BaseViewModel {
 
   public void setQueueEmptyAction(Runnable queueEmptyAction) {
     this.queueEmptyAction = queueEmptyAction;
+  }
+
+  public void setProductWillBeFilled(boolean productWillBeFilled) {
+    this.productWillBeFilled = productWillBeFilled;
+  }
+
+  public boolean isProductWillBeFilled() {
+    return productWillBeFilled;
   }
 
   public boolean isQuickModeEnabled() {
